--- a/pug/package.json
+++ b/pug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Coderhouse",
-  "type":"module",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,6 @@
   "homepage": "https://github.com/AnaRu80/Coderhouse#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0"
+    "pug": "^3.0.2"
   }
 }
