--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/AnaRu80/Coderhouse#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "express-handlebars": "^5.3.0",
+    "socket.io": "^4.0.1"
   }
 }
